@@ -1,5 +1,5 @@
 // generics/coffee/CoffeeSupplier.java
-// (c)2017 MindView LLC: see Copyright.txt
+// (c)2021 MindView LLC: see Copyright.txt
 // We make no guarantees that this code is fit for any purpose.
 // Visit http://OnJava8.com for more book information.
 // {java generics.coffee.CoffeeSupplier}
@@ -7,6 +7,7 @@ package generics.coffee;
 import java.util.*;
 import java.util.function.*;
 import java.util.stream.*;
+import java.lang.reflect.InvocationTargetException;
 
 public class CoffeeSupplier
 implements Supplier<Coffee>, Iterable<Coffee> {
@@ -17,14 +18,16 @@ implements Supplier<Coffee>, Iterable<Coffee> {
   // For iteration:
   private int size = 0;
   public CoffeeSupplier(int sz) { size = sz; }
-  @Override
-  public Coffee get() {
+  @Override public Coffee get() {
     try {
       return (Coffee)
-        types[rand.nextInt(types.length)].newInstance();
+        types[rand.nextInt(types.length)]
+        .getConstructor().newInstance();
       // Report programmer errors at run time:
-    } catch(InstantiationException |
-            IllegalAccessException e) {
+      } catch(InstantiationException |
+              NoSuchMethodException |
+              InvocationTargetException |
+              IllegalAccessException e) {
       throw new RuntimeException(e);
     }
   }
@@ -32,8 +35,7 @@ implements Supplier<Coffee>, Iterable<Coffee> {
     int count = size;
     @Override
     public boolean hasNext() { return count > 0; }
-    @Override
-    public Coffee next() {
+    @Override public Coffee next() {
       count--;
       return CoffeeSupplier.this.get();
     }
@@ -42,8 +44,7 @@ implements Supplier<Coffee>, Iterable<Coffee> {
       throw new UnsupportedOperationException();
     }
   }
-  @Override
-  public Iterator<Coffee> iterator() {
+  @Override public Iterator<Coffee> iterator() {
     return new CoffeeIterator();
   }
   public static void main(String[] args) {
