@@ -1,22 +1,24 @@
 // onjava/BasicSupplier.java
-// (c)2017 MindView LLC: see Copyright.txt
+// (c)2021 MindView LLC: see Copyright.txt
 // We make no guarantees that this code is fit for any purpose.
 // Visit http://OnJava8.com for more book information.
-// Supplier from a class with a no-arg constructor
+// Supplier from a class with a zero-argument constructor
 package onjava;
 import java.util.function.*;
+import java.lang.reflect.InvocationTargetException;
 
 public class BasicSupplier<T> implements Supplier<T> {
   private Class<T> type;
   public BasicSupplier(Class<T> type) {
     this.type = type;
   }
-  @Override
-  public T get() {
+  @Override public T get() {
     try {
       // Assumes type is a public class:
-      return type.newInstance();
+      return type.getConstructor().newInstance();
     } catch(InstantiationException |
+            NoSuchMethodException |
+            InvocationTargetException |
             IllegalAccessException e) {
       throw new RuntimeException(e);
     }
